# networking-final

./: .editorconfig  .env  .flake8  .gitignore  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml
profiles/: profile.json
res/: image.tif  packets.py
res/dhcp_client/: main-backup.py  main.py  sender.py
res/pyTFTP/: server.py
res/pyTFTP-tests/: Makefile
src/app/: .env  config.py  controller.py  handlers.py  main.py  res.txt  rudp.py  storage.py
src/client/: commands.py  main.py  options.py  rudp.py
src/dhcp/: .env  config.py  controller.py  database.py  handlers.py  main.py  packets.py
src/dhcp-client/: main.py
src/dns/: .env  config.py  controller.py  converters.py  database.py  handlers.py  main.py  packets.py
src/lib/: config.py  ftp.py  network.py  profiler.py
src/scripts/: create_big_file.py
src/tests/: __init__.py  helpers.py  test_app_download.py  test_app_upload.py
src/utils/: __init__.py  ftp.py
tests/: Makefile
tests-files/uploads/dir/: B.md
uploads/: A.md
uploads/dir/: block.txt
uploads/other/: 1K.txt  A.txt
