[tool.poetry]
name = "networking-final"
version = "0.1.0"
description = ""
authors = ["Omer Priel <omer.priel2@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
python-dotenv = "^0.21.1"
prettytable = "^3.6.0"
pydantic = "^1.10.5"
jsbeautifier = "^1.14.7"
pytest = "^7.2.2"

[tool.black]
target-version = ['py310']
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | .venv
    | docs
    | res
    | uploads
    | temp
  )/
)
'''

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma="True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
